// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table.Basic > columns support JSX condition 1`] = `
LoadedCheerio {
  "0": <button>
    Click 2 times
  </button>,
  "1": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                title
              </th>
              <th
                class="rc-table-cell"
                scope="col"
              >
                title3
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
            >
              <td
                class="rc-table-cell"
              >
                2
              </td>
              <td
                class="rc-table-cell"
              >
                3
              </td>
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
            >
              <td
                class="rc-table-cell"
              >
                2
              </td>
              <td
                class="rc-table-cell"
              >
                3
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > custom components > renders correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          name="my-table"
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
            name="my-header-wrapper"
          >
            <tr
              name="my-header-row"
            >
              <th
                class="rc-table-cell"
                name="my-header-cell"
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
            name="my-body-wrapper"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
              name="my-body-row"
            >
              <td
                class="rc-table-cell"
                name="my-body-cell"
              >
                Lucy
              </td>
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
              name="my-body-row"
            >
              <td
                class="rc-table-cell"
                name="my-body-cell"
              >
                Jack
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > custom components > renders fixed column and header correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table rc-table-fixed-header rc-table-fixed-column rc-table-scroll-horizontal rc-table-has-fix-left rc-table-has-fix-right"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-header"
        style="overflow: hidden;"
      >
        <table
          style="table-layout: fixed; width: 100px; min-width: 100%;"
        >
          <colgroup>
            <col
              style="width: 0px;"
            />
            <col
              style="width: 0px;"
            />
            <col
              style="width: 0px;"
            />
            <col
              style="width: 15px;"
            />
          </colgroup>
          <thead
            class="rc-table-thead"
            name="my-header-wrapper"
          >
            <tr
              name="my-header-row"
            >
              <th
                class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
                name="my-header-cell"
                scope="col"
                style="position: sticky; left: 0px;"
              >
                Name
              </th>
              <th
                class="rc-table-cell"
                name="my-header-cell"
                scope="col"
              >
                Age
              </th>
              <th
                class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
                name="my-header-cell"
                scope="col"
                style="position: sticky; right: 15px;"
              >
                Gender
              </th>
              <th
                class="rc-table-cell rc-table-cell-fix-right rc-table-cell-scrollbar"
                name="my-header-cell"
                style="position: sticky; right: 0px;"
              />
            </tr>
          </thead>
        </table>
      </div>
      <div
        class="rc-table-body"
        style="overflow-x: auto; overflow-y: scroll; max-height: 100px;"
      >
        <table
          name="my-table"
          style="width: 100px; min-width: 100%; table-layout: fixed;"
        >
          <colgroup />
          <tbody
            class="rc-table-tbody"
            name="my-body-wrapper"
          >
            <tr
              aria-hidden="true"
              class="rc-table-measure-row"
              style="height: 0px;"
            >
              <td
                style="padding-block: 0; border-block: 0; height: 0px;"
              >
                <div
                  style="height: 0px; overflow: hidden; font-weight: bold;"
                >
                  Name
                </div>
              </td>
              <td
                style="padding-block: 0; border-block: 0; height: 0px;"
              >
                <div
                  style="height: 0px; overflow: hidden; font-weight: bold;"
                >
                  Age
                </div>
              </td>
              <td
                style="padding-block: 0; border-block: 0; height: 0px;"
              >
                <div
                  style="height: 0px; overflow: hidden; font-weight: bold;"
                >
                  Gender
                </div>
              </td>
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="0"
              name="my-body-row"
            >
              <td
                class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
                name="my-body-cell"
                style="position: sticky; left: 0px;"
              >
                Lucy
              </td>
              <td
                class="rc-table-cell"
                name="my-body-cell"
              >
                27
              </td>
              <td
                class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
                name="my-body-cell"
                style="position: sticky; right: 0px;"
              >
                F
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > custom components > scroll content > with scroll 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table rc-table-fixed-header rc-table-scroll-horizontal"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-header"
        style="overflow: hidden;"
      >
        <table
          style="table-layout: fixed; width: 100px; min-width: 100%;"
        >
          <colgroup>
            <col
              style="width: 0px;"
            />
            <col
              style="width: 888px;"
            />
            <col
              style="width: 15px;"
            />
          </colgroup>
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
              />
              <th
                class="rc-table-cell"
              />
              <th
                class="rc-table-cell rc-table-cell-scrollbar"
              />
            </tr>
          </thead>
        </table>
      </div>
      <h1>
        Bamboo
      </h1>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > internal api > transformColumns > basic 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                before
              </th>
              <th
                class="rc-table-cell"
                scope="col"
              >
                Name
              </th>
              <th
                class="rc-table-cell"
                scope="col"
              >
                after
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
            >
              <td
                class="rc-table-cell"
              />
              <td
                class="rc-table-cell"
              >
                Lucy
              </td>
              <td
                class="rc-table-cell"
              />
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
            >
              <td
                class="rc-table-cell"
              />
              <td
                class="rc-table-cell"
              >
                Jack
              </td>
              <td
                class="rc-table-cell"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > renders colSpan correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                colspan="2"
                scope="colgroup"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
            >
              <td
                class="rc-table-cell"
                colspan="2"
              >
                John
              </td>
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
            >
              <td
                class="rc-table-cell"
              >
                Terry
              </td>
              <td
                class="rc-table-cell"
              >
                Garner
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > renders correctly > RTL 1`] = `
LoadedCheerio {
  "0": <div
    class="test-prefix test-class-name test-prefix-rtl"
  >
    <div
      class="test-prefix-container"
    >
      <div
        class="test-prefix-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="test-prefix-thead"
          >
            <tr>
              <th
                class="test-prefix-cell"
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody
            class="test-prefix-tbody"
          >
            <tr
              class="test-prefix-row test-prefix-row-level-0"
              data-row-key="key0"
            >
              <td
                class="test-prefix-cell"
              >
                Lucy
              </td>
            </tr>
            <tr
              class="test-prefix-row test-prefix-row-level-0"
              data-row-key="key1"
            >
              <td
                class="test-prefix-cell"
              >
                Jack
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > renders correctly > basic 1`] = `
LoadedCheerio {
  "0": <div
    class="test-prefix test-class-name"
  >
    <div
      class="test-prefix-container"
    >
      <div
        class="test-prefix-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="test-prefix-thead"
          >
            <tr>
              <th
                class="test-prefix-cell"
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody
            class="test-prefix-tbody"
          >
            <tr
              class="test-prefix-row test-prefix-row-level-0"
              data-row-key="key0"
            >
              <td
                class="test-prefix-cell"
              >
                Lucy
              </td>
            </tr>
            <tr
              class="test-prefix-row test-prefix-row-level-0"
              data-row-key="key1"
            >
              <td
                class="test-prefix-cell"
              >
                Jack
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > renders correctly > column children undefined 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                姓名
              </th>
              <th
                class="rc-table-cell"
                scope="col"
              >
                年龄
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
            >
              <td
                class="rc-table-cell"
              >
                Lucy
              </td>
              <td
                class="rc-table-cell"
              />
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
            >
              <td
                class="rc-table-cell"
              >
                Jack
              </td>
              <td
                class="rc-table-cell"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > renders correctly > falsy columns 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                姓名
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
            >
              <td
                class="rc-table-cell"
              >
                Lucy
              </td>
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
            >
              <td
                class="rc-table-cell"
              >
                Jack
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > renders correctly > no columns 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
              />
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
            >
              <td
                class="rc-table-cell"
              />
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
            >
              <td
                class="rc-table-cell"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > renders rowSpan correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                First Name
              </th>
              <th
                class="rc-table-cell"
                scope="col"
              >
                Last Name
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key0"
            >
              <td
                class="rc-table-cell"
              >
                John
              </td>
              <td
                class="rc-table-cell"
                rowspan="2"
              >
                Doe
              </td>
            </tr>
            <tr
              class="rc-table-row rc-table-row-level-0"
              data-row-key="key1"
            >
              <td
                class="rc-table-cell"
              >
                Terry
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > should get scrollbar size 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table rc-table-fixed-header"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-header"
        style="overflow: hidden;"
      >
        <table
          style="table-layout: fixed;"
        >
          <colgroup>
            <col
              style="width: 85px;"
            />
            <col
              style="width: 15px;"
            />
          </colgroup>
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                Name
              </th>
              <th
                class="rc-table-cell rc-table-cell-scrollbar"
              />
            </tr>
          </thead>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table.Basic > syntactic sugar 1`] = `
LoadedCheerio {
  "0": <div
    class="rc-table"
  >
    <div
      class="rc-table-container"
    >
      <div
        class="rc-table-content"
      >
        <table
          style="table-layout: auto;"
        >
          <colgroup />
          <thead
            class="rc-table-thead"
          >
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                total
              </th>
            </tr>
            <tr>
              <th
                class="rc-table-cell"
                scope="col"
              >
                Name
              </th>
            </tr>
          </thead>
          <tbody
            class="rc-table-tbody"
          >
            <tr
              class="rc-table-placeholder"
            >
              <td
                class="rc-table-cell"
              >
                No Data
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
